--- a/css/custom.css
+++ b/css/custom.css
@@ -1,10 +1,70 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,600;1,300&display=swap");
+
+<!--Update Account-->
+
+img {
+  width:200px;
+  height:200px;
+}
+.profile-pic {
+  position: absolute;
+  top: 43%;
+  bottom: 0;
+  left:50%;
+  right: 50%;
+  height:200px;
+  width: 200px;
+  margin-bottom:10px;
+  transform: translate(-50%, -50%);
+  z-index:1;
+} 
+
+#photo {
+  height:200px;
+  width:200px;
+}
+
+#file {
+  display:none;
+}
+
+#uploadBtn {
+  height:40px;
+  width:100%;
+  position:absolute;
+  bottom: 0;
+  left:56%;
+  transform: translateX(-50%);
+  text-align:center;
+  background: rgba(0,0,0,0.7);
+  color:white;
+  line-height:30px;
+  font-size: 15px;
+  cursor: pointer;
+  display: none;
+  font-family: 'Poppins', sans-serif;
+}
+<!--End Update Account-->
+
 body {
   font-family: "Poppins", sans-serif;
 }
 a {
   color: inherit;
   text-decoration: none;
+}
+li {
+  list-style: none;
+}
+.btn-primary {
+  background-color:#1A6173;
+  color:white;
+  border-color: #1A6173;
+  font-family:'Poppins', sans-serif;
+}
+.btn-primary:hover {
+  background-color:transparent !important;
+  color:#1A6173;
 }
 button a:hover {
   color: lightblue;
@@ -108,4 +168,24 @@ li a {
 
 .nav-item {
   font-size: 1.15em;
+}
+
+.fa-arrow-circle-left:before {
+  content: "\f0a8";
+  color: #136072;
+  font-size: 25px;
+}
+h2 {
+  font-family: 'Poppins', sans-serif;
+}
+h3, h4 {
+  color: #136072;
+  font-family: 'Poppins', sans-serif;
+  font-weight:700;
+}
+label {
+  font-family: 'Poppins', sans-serif;
+}
+h6 {
+  font-family: 'Poppins', sans-serif;
 }
