--- a/css/custom.css
+++ b/css/custom.css
@@ -1,52 +1,50 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,600;1,300&display=swap");
-
-<!--Update Account-->
-
-img {
-  width:200px;
-  height:200px;
+body {
+  font-family: "Poppins", sans-serif;
+}
+a:hover {
+  text-decoration: underline;
+}
+<!--Update Account-- > img {
+  width: 200px;
+  height: 200px;
 }
 .profile-pic {
   position: absolute;
   top: 43%;
   bottom: 0;
-  left:50%;
+  left: 50%;
   right: 50%;
-  height:200px;
+  height: 200px;
   width: 200px;
-  margin-bottom:10px;
+  margin-bottom: 10px;
   transform: translate(-50%, -50%);
-  z-index:1;
-} 
+  z-index: 1;
+}
 
 #photo {
-  height:200px;
-  width:200px;
+  height: 200px;
+  width: 200px;
 }
 
 #file {
-  display:none;
+  display: none;
 }
 
 #uploadBtn {
-  height:40px;
-  width:100%;
-  position:absolute;
+  height: 40px;
+  width: 100%;
+  position: absolute;
   bottom: 0;
-  left:56%;
+  left: 56%;
   transform: translateX(-50%);
-  text-align:center;
-  background: rgba(0,0,0,0.7);
-  color:white;
-  line-height:30px;
+  text-align: center;
+  background: rgba(0, 0, 0, 0.7);
+  color: white;
+  line-height: 30px;
   font-size: 15px;
   cursor: pointer;
   display: none;
-  font-family: 'Poppins', sans-serif;
-}
-<!--End Update Account-->
-
-body {
   font-family: "Poppins", sans-serif;
 }
 a {
@@ -57,33 +55,20 @@ li {
   list-style: none;
 }
 .btn-primary {
-  background-color:#1A6173;
-  color:white;
-  border-color: #1A6173;
-  font-family:'Poppins', sans-serif;
+  background-color: #1a6173;
+  color: white;
+  border-color: #1a6173;
+  font-family: "Poppins", sans-serif;
 }
 .btn-primary:hover {
-  background-color:transparent !important;
-  color:#1A6173;
+  background-color: transparent !important;
+  color: #1a6173;
 }
 button a:hover {
   color: lightblue;
 }
 .custom-container {
   padding: 3.5vw;
-}
-.red-sidebar {
-  display: grid;
-  place-self: center;
-  background-color: #731230;
-  color: white;
-  min-height: 90vh;
-}
-.sidebar-flex {
-  display: flex;
-  justify-content: space-around;
-  align-items: flex-start;
-  font-size: 1.5em;
 }
 
 .card-custom {
@@ -102,14 +87,29 @@ button a:hover {
 
 .learn-more {
   display: flex;
-  justify-content: start;
   align-items: center;
   gap: 1em;
+  color: white;
+}
+.learn-more button {
+  border: none;
+  padding: 1em;
+  background: #757f9a; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #d7dde8,
+    #757f9a
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #d7dde8,
+    #757f9a
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
-.hero {
+/*.hero {
   min-height: 90vh;
-}
+}*/
 .card-row {
   min-height: 70vh;
 }
@@ -134,11 +134,13 @@ li a {
 }
 .home-title {
   color: #731230;
-  font-weight: 700;
+  font-weight: 300;
   font-size: 3rem;
   letter-spacing: 1.5px;
 }
-
+.title-contrast {
+  font-weight: 700;
+}
 .what-is-sa {
   background-color: #fffefa !important;
 }
@@ -176,16 +178,20 @@ li a {
   font-size: 25px;
 }
 h2 {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
-h3, h4 {
+/*h3, h4 {
   color: #136072;
   font-family: 'Poppins', sans-serif;
   font-weight:700;
-}
+}*/
 label {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 h6 {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
+}
+
+.custom-btn {
+  border: solid 1px;
 }
